# human-voice

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  human-voice.skill  justfile  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
agents/: interview-conductor.md  profile-synthesizer.md  voice-reviewer.md
bugs/: scoring-null-dimensions.md
commands/: fix.md  review.md  setup.md  voice-copilot-install.md  voice-design.md  voice-drift.md  voice-fix.md  voice-interview.md  voice-profile.md  voice-profiles.md  voice-resume.md  (+4 more)
nlp/: pyproject.toml
nlp/src/mivoca_nlp/: __init__.py  __main__.py  cli.py  pipeline.py
nlp/src/mivoca_nlp/stages/: __init__.py  pragmatic.py  tokenizer.py
nlp/src/voice_nlp/: __init__.py  __main__.py  cli.py  pipeline.py
nlp/src/voice_nlp/lexicons/: boosters.json  hedges.json  liwc_categories.json
nlp/src/voice_nlp/stages/: __init__.py  composite.py  discourse.py  lexical.py  syntactic.py
nlp/tests/: conftest.py  test_composite.py  test_lexical.py  test_pipeline.py  test_pragmatic.py  test_syntactic.py
nlp/tests/fixtures/: sample_academic.txt  sample_business.txt  sample_creative.txt
scoring/: pyproject.toml
scoring/src/mivoca_scoring/: __init__.py  __main__.py  cli.py  profile_builder.py  quality_checks.py  self_report.py  semantic_differential.py
scoring/src/voice_scoring/: __init__.py  __main__.py  calibration.py  cli.py  profile_builder.py  quality_checks.py  self_report.py
scoring/tests/: conftest.py  test_calibration.py  test_new_code_paths.py  test_profile_builder.py  test_self_report.py
(+137 files in other folders)
